<resources>
    <string name="app_name">LookApp</string>

    <string name="hello_world">Hello LookApp!</string>
    <string name="action_settings">Settings</string>
    <string name="login_register">register</string>
    <string name="register_sms_code_get">Get sms code</string>
    <string name="register">Registration</string>
    <string name="register_ok">registration was successful</string>
    <string name="favourites_delete_success"> removed from favourites</string>
    <string name="favourites_delete_error">was not removed from favourites</string>
    <string name="favourites">Favourites</string>
    <string name="spot_list">Spot list</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="drawer_settings_text">Settings</string>
    <string name="choose_language">Language:</string>
    <string name="login_error">Error loading data</string>
    <string name="loading_data">Loading data</string>
    <string name="favourite_add_error">Error while adding spot to favourites</string>
    <string name="free_sits">Free sits</string>
    <string name="has_non_smoking_area">has non smoking area</string>
    <string name="can_reserve_place">Can reserve place</string>
    <string name="working_hours">Working hours</string>
    <string name="contact_info">Contact number</string>
    <string name="admin_panel">Admin panel</string>
    <string name="admin_booking">Admin booking</string>
    <string name="spot_rating_dialog_rate_btn_text">Rate</string>
    <string name="spot_rating_dialog_cancel_btn_text">Cancel</string>
    <string name="spot_details_address_text">Address:</string>
    <string name="spot_details_contact_info_text">Contact info:</string>
    <string name="spot_details_working_hours_text">Working hours:</string>
    <string name="spot_details_smoking_zone_text">Does not have nonsmokers area</string>
    <string name="spot_details_has_smoking_zone_text">Has nonsmokers area</string>
    <string name="spot_details_event_text">Event:</string>
    <string name="spot_details_menu_text">Menu</string>
    <string name="spot_details_reserve_text">Reserve</string>
    <string name="spot_reserve_alert_text">Please login to reserve place</string>
    <string name="alert_dialog_ok_btn_text">OK</string>
    <string name="spot_rating_alert_text">Please login to rate place</string>
    <string name="spot_reserve_num_places">Number of places:</string>
    <string name="spot_reserve_time">Visit time:</string>
    <string name="spot_reserve_time_hint">Hour-minute</string>
    <string name="spot_reserve_comment">Max 100 symbols</string>
    <string name="spot_reserve_comment_label">Comment:</string>
    <string name="booking_username">Username:</string>
    <string name="booking_number">Number:</string>
    <string name="booking_sits">Seats:</string>
    <string name="booking_time">Time:</string>
    <string name="send">Send</string>
    <string name="reserve_success_message">Reserve request sent successfully</string>
    <string name="reserve_unsuccess_message">Reserving places failed, try again</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="price">Price:</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="sending_sms_code_failed_text">Sending SMS code failed, please try again</string>
    <string name="sending_sms_code_success_text">SMS code was sent successfully</string>
    <string name="wifi_password">wifi password:</string>
    <string name="has_wifi">Has wifi</string>
    <string name="search">Search</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="register_phone_number">Phone Number</string>

    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_enter">Enter</string>
    <string name="login_chb_save">Save Username</string>
    <string name="no_login_data_warning">Please enter login data</string>
    <string name="no_reserve_available_text">This place does not have a reserve service</string>
    <string name="message_send_success">Message sent successfully</string>
    <string name="message_send_fail">Sending message failed</string>
    <string name="reserve_response">Response for reserve:</string>
    <string name="search_seats_hint">Seats</string>
    <string name="seats_update_success">Seats updated successfully</string>
    <string name="seats_update_error">Seats update failed</string>
    <string name="event_update_success">Event updated successfully</string>
    <string name="event_update_error">Event update failed</string>
</resources>
