<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:superlistview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/spot_search_main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="4dp"-->
            <!--android:background="#fdd"-->
            <!--android:src="@drawable/ic_action_search" />-->

            <EditText
                android:id="@+id/search_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/search_background_color"
                android:hint="@string/search"
                android:padding="5dp"
                android:textColor="@color/search_text_color"
                android:textColorHint="@android:color/white"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/has_wifi_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:button="@drawable/chb_save_name_selector"
                android:paddingLeft="10dp"
                android:text="@string/has_wifi"
                android:textColor="@color/search_text_color"
                android:textSize="@dimen/search_text_size" />

            <CheckBox
                android:id="@+id/has_non_smoking_area_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:button="@drawable/chb_save_name_selector"
                android:paddingLeft="10dp"
                android:text="@string/has_non_smoking_area"
                android:textColor="@color/search_text_color"
                android:textSize="@dimen/search_text_size" />

            <CheckBox
                android:id="@+id/can_reserve_place_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:button="@drawable/chb_save_name_selector"
                android:paddingLeft="10dp"
                android:text="@string/can_reserve_place"
                android:textColor="@color/search_text_color"
                android:textSize="@dimen/search_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <EditText
                    android:hint="@string/search_seats_hint"
                    android:textColorHint="@color/search_background_color"
                    android:id="@+id/free_sits_et"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_text_shape"
                    android:gravity="left|center_vertical"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="5dp"
                    android:textColor="@color/search_text_color"
                    android:textSize="@dimen/search_text_size" />

                <!--<TextView-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/free_sits"-->
                <!--android:textColor="@android:color/black" />-->
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/search_divider_color"
            />

    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/spot_list_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MergeRootFrame">

        <com.lookapp.swipelistview.SwipeListView
            android:id="@+id/spot_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="@dimen/spot_list_divider_height"
            superlistview:superlv__scrollbarStyle="insideOverlay"
            tools:listitem="@layout/spot_list_item" />

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>